Create new summaryOnSell API  & modify on onSell API
